# a_simple_experimental_database

./: .gitignore  .rspec  CMakeCache.txt  CMakeLists.txt  Gemfile  Makefile  README  README.md  REPL.c  b_tree.c  b_tree.h  cmake_install.cmake  common.h  disk_operation.c  disk_operation.h  frontend.c  frontend_test.cc  main.c  main.h  main_test.cpp  service.c  service.h  service_test.cc  store.c  store.h  structure.h  test.sh  tree.h  tree_in_main_memory.c  tree_mock.c
.ccls-cache/@@home@guilherme@repositories@a_simple_experimental_database/: @usr@include@alloca.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@fcntl-linux.h.blob  @usr@include@bits@fcntl.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@getopt_core.h.blob  @usr@include@bits@getopt_posix.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@posix_opt.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@stat.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  @usr@include@bits@struct_stat.h.blob  @usr@include@bits@thread-shared-types.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@FILE.h.blob  (+42 more)
spec/: tests.rb
src/: CMakeLists.txt  REPL.c  REPL.h  b_tree.c  b_tree.h  disk_operation.c  disk_operation.h  main.c  main.h  main_test.cpp  structure.h
t/: CMakeLists.txt  test-main.rb  tests.rb
tests/: tests.rb
(+27 files in other folders)
